--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ django = "^5.0.1"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
+djangorestframework-simplejwt = "^5.3.1"
+drf-spectacular = "^0.27.1"
+django-cors-headers = "^4.3.1"
+django-filter = "^23.5"
 
 
 [build-system]
